--- a/Makefile.in
+++ b/Makefile.in
@@ -31,7 +31,6 @@ PACKAGE_VERSION		= @PACKAGE_VERSION@
 
 PKG_SOURCES	= @PKG_SOURCES@
 PKG_OBJECTS	= @PKG_OBJECTS@
-
 PKG_STUB_SOURCES = @PKG_STUB_SOURCES@
 PKG_STUB_OBJECTS = @PKG_STUB_OBJECTS@
 
@@ -54,11 +53,6 @@ PKG_HEADERS	= @PKG_HEADERS@
 #========================================================================
 
 PKG_LIB_FILE	= @PKG_LIB_FILE@
-PKG_STUB_LIB_FILE = @PKG_STUB_LIB_FILE@
-
-# Define RSVISA dependency library path (if needed for installation)
-RSVISA_LIB_PATH	= @RSVISA_LIB_PATH@
-
 lib_BINARIES	= $(PKG_LIB_FILE)
 BINARIES	= $(lib_BINARIES)
 
@@ -151,9 +145,11 @@ PKG_CFLAGS	= @PKG_CFLAGS@
 
 # Original DEFS from configure with stubs
 DEFS_WITH_STUBS = @DEFS@ $(PKG_CFLAGS)
+# Use stubs for Tcl linking
+DEFS		= $(DEFS_WITH_STUBS)
 
 # Move pkgIndex.tcl to 'BINARIES' var if it is generated in the Makefile
-CONFIG_CLEAN_FILES = Makefile pkgIndex.tcl
+CONFIG_CLEAN_FILES = 
 
 CPPFLAGS	= @CPPFLAGS@
 LIBS		= @PKG_LIBS@ @LIBS@
@@ -165,16 +161,6 @@ CXXCOMPILE	= $(CXX) $(DEFS) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CFLAGS) 
 #========================================================================
 # Start of user-definable TARGETS section
 #========================================================================
-
-#========================================================================
-# TEA TARGETS.  Please note that the "libraries:" target refers to platform
-# independent files, and the "binaries:" target includes executable programs and
-# platform-dependent libraries.  Modify these targets so that they install
-# the various pieces of your package.  The make and install rules
-# for the BINARIES that you specified above have already been done.
-#========================================================================
-
-all: binaries libraries doc
 
 #========================================================================
 # The binaries target builds executable programs, Windows .dll's, unix
@@ -254,11 +240,6 @@ $(PKG_LIB_FILE): $(PKG_OBJECTS)
 	${MAKE_LIB}
 	$(RANLIB) $(PKG_LIB_FILE)
 
-$(PKG_STUB_LIB_FILE): $(PKG_STUB_OBJECTS)
-	-rm -f $(PKG_STUB_LIB_FILE)
-	${MAKE_STUB_LIB}
-	$(RANLIB_STUB) $(PKG_STUB_LIB_FILE)
-
 #========================================================================
 # We need to enumerate the list of .c to .o lines here.
 #
@@ -289,51 +270,8 @@ VPATH = $(srcdir):$(srcdir)/generic:$(srcdir)/unix:$(srcdir)/win
 # You should update the README and ChangeLog (if using) files as well.
 #========================================================================
 
-COMPRESS	= gzip
-COMPRESS_EXT	= gz
-ifneq ($(COMPRESS),)
-    COMPRESS_OPT = --$(COMPRESS)
-endif
-
 DIST_ROOT	= /tmp/dist
 DIST_DIR	= $(DIST_ROOT)/$(PACKAGE_NAME)$(PACKAGE_VERSION)
-
-dist-clean:
-	rm -rf $(DIST_DIR) $(DIST_ROOT)/$(PACKAGE_NAME)$(PACKAGE_VERSION).tar.*
-
-dist: dist-clean
-	mkdir -p $(DIST_DIR)
-	cp -p $(srcdir)/ChangeLog $(srcdir)/README* $(srcdir)/LICENSE* \
-		$(srcdir)/aclocal.m4 $(srcdir)/configure $(srcdir)/*.in \
-		$(DIST_DIR)/
-	chmod 664 $(DIST_DIR)/Makefile.in $(DIST_DIR)/aclocal.m4
-	chmod 775 $(DIST_DIR)/configure $(DIST_DIR)/configure.ac
-
-	for i in $(srcdir)/*.c $(srcdir)/*.h  $(srcdir)/*.cpp ; do \
-	    if [ -f $$i ]; then \
-		cp -p $$i $(DIST_DIR)/ ; \
-	    fi ; \
-	done
-
-	mkdir $(DIST_DIR)/tclconfig
-	cp $(srcdir)/tclconfig/install-sh $(srcdir)/tclconfig/tcl.m4 \
-		$(DIST_DIR)/tclconfig/
-	chmod 664 $(DIST_DIR)/tclconfig/tcl.m4
-	chmod +x $(DIST_DIR)/tclconfig/install-sh
-
-	list='demos doc generic library mac tests unix win rsvisa'; \
-	for p in $$list; do \
-	    if test -d $(srcdir)/$$p ; then \
-		mkdir $(DIST_DIR)/$$p; \
-		cp -p $(srcdir)/$$p/*.* $(DIST_DIR)/$$p/; \
-	    fi; \
-	done
-
-	(cd $(DIST_ROOT); $(TAR) -cvf - $(PACKAGE_NAME)$(PACKAGE_VERSION)) \
-	    | $(COMPRESS) > $(DIST_ROOT)/$(PACKAGE_NAME)$(PACKAGE_VERSION).tar.$(COMPRESS_EXT)
-
-	mv $(DIST_ROOT)/$(PACKAGE_NAME)$(PACKAGE_VERSION).tar.$(COMPRESS_EXT) .
-	rm -rf $(DIST_DIR)
 
 #========================================================================
 # End of user-definable section
@@ -350,8 +288,7 @@ clean:
 	-test -z "$(CLEANFILES)" || rm -f $(CLEANFILES)
 
 distclean: clean
-	-rm -f *.tab.c
-	-rm -f $(CONFIG_CLEAN_FILES)
+	-rm -f Makefile pkgIndex.tcl configure
 	-rm -f config.cache config.log config.status
 
 #========================================================================
